--- a/index.html
+++ b/index.html
@@ -23,34 +23,12 @@
     <main class="principal">
         <h2 class="principal__titulo">Dados do cadastro</h2>
 
-        <form class="principal__formulario" id="formulario" target="_blank"
-            onsubmit="location.replace('./cadastro-finalizado.html')">
-            <h3 class="principal__subtitulo">Dados pessoais</h3>
-            <div class="formulario__campo">
-                <label class="campo__etiqueta" for="nome">Nome Completo</label>
-                <input name="nome" id="nome" class="campo__escrita" required />
-            </div>
-            <div class="formulario__dupla">
-                <div class="formulario__campo">
-                    <label class="campo__etiqueta" for="nascimento">Nascimento</label>
-                    <input name="nascimento" id="nascimento" type="date" class="campo__escrita" required />
-                </div>
-                <div class="formulario__campo">
-                    <label class="campo__etiqueta" for="telefone">Contato</label>
-                    <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita"
-                        required />
-                </div>
-            </div>
-            <div class="formulario__campo">
-                <label class="campo__etiqueta" for="email">E-mail</label>
-                <input name="email" id="email" type="email" class="campo__escrita" required />
-            </div>
-
             <h3 class="principal__subtitulo">Endereço</h3>
 
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="cep">CEP</label>
                 <input name="cep" id="cep" class="campo__escrita" required />
+                <div id="erro"></div>
             </div>
 
             <div class="formulario__campo">
